codepkg/objects/History_Tracker_Field_Configuration__mdt.object
<CustomObject>
    <description>Fields that needs to be tracked for each object that is tracked .Object tracked can be found in History Tracker Configuration metadata</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Tracker_Configuration__c</fullName>
        <label>History Tracker Configuration</label>
        <referenceTo>History_Tracker_Configuration__mdt</referenceTo>
        <relationshipLabel>History Tracker Fields</relationshipLabel>
        <relationshipName>Related_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Message_Field_API_Name__c</fullName>
        <label>Message Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>History Tracker Field Configuration</label>
    <pluralLabel>History Tracker Field Configurations</pluralLabel>
</CustomObject>